--- a/frontend/src/app/pages/admin/create-users/create-users.component.html
+++ b/frontend/src/app/pages/admin/create-users/create-users.component.html
@@ -8,28 +8,55 @@
                <h2>Criar novo usuário</h2>
           </div>
 
-          <form class="main-form">
+          <form class="main-form" [formGroup]="userForm" (ngSubmit)="Submit()">
                <label>Nome:</label>
-               <input type="text" placeholder="Digite o Nome do novo usuário" name="name">
-               <app-input-error-message></app-input-error-message>
+               <input 
+                    type="text" 
+                    formControlName="name" 
+                    placeholder="Digite o Nome do novo usuário" 
+                    name="name"
+                    (input)="clearInputErrors('name')"
+                    (change)="getNameErrors()">
+               <app-input-error-message [errors]="nameErrors"></app-input-error-message>
 
                <label>Email:</label>
-               <input type="email" placeholder="Digite o Email do novo usuário" name="email">
-               <app-input-error-message></app-input-error-message>
+               <input 
+                    type="email" 
+                    formControlName="email" 
+                    placeholder="Digite o Email do novo usuário" 
+                    name="email"
+                    (input)="clearInputErrors('email')"
+                    (change)="getEmailErrors()">
+               <app-input-error-message [errors]="emailErrros"></app-input-error-message>
 
                <label>Senha:</label>
-               <input type="password" placeholder="Digite a senha do novo usuário" name="password">
-               <app-input-error-message></app-input-error-message>
+               <input 
+                    type="password" 
+                    formControlName="password" 
+                    placeholder="Digite a senha do novo usuário" 
+                    name="password"
+                    (input)="clearInputErrors('password')"
+                    (change)="getPasswordErrors()">
+               <app-input-error-message [errors]="passwordErrros"></app-input-error-message>
 
                <label>Confirmação de senha:</label>
-               <input type="password" placeholder="Digite novamente a senha do novo usuário" name="passwordVerify">
-               <app-input-error-message></app-input-error-message>
+               <input 
+                    type="password" 
+                    formControlName="passwordVerify" 
+                    placeholder="Digite novamente a senha do novo usuário" 
+                    name="'passwordVerify'"
+                    (input)="clearInputErrors('passwordVerify')"
+                    (change)="getPasswordVerifyErrors()">
+               <app-input-error-message [errors]="passwordVerifyErrors"></app-input-error-message>
 
                <label>Role:</label>
-               <select id="roleSelect" name="role" class="selectRole">
-                    <option value="" disabled selected>Selecione a role do usuário</option>
-                    <option value="0">Admin</option>
-                    <option value="1">Usuário</option>
+               <select 
+                    id="roleSelect"
+                    formControlName="role" 
+                    name="role" 
+                    class="selectRole">
+                         <option value="0">Admin</option>
+                         <option selected value="1">Usuário</option>
                </select>
 
                <button type="submit">Cadastrar</button>
