feat: Craete basic register

--- a/frontend/src/app/pages/admin/create-users/create-users.component.html
+++ b/frontend/src/app/pages/admin/create-users/create-users.component.html
@@ -1,3 +1,4 @@
+<app-spinning [isLoading]="isLoading"></app-spinning>
 <app-main-navbar></app-main-navbar>
 <section class="main-section appear">
      <app-top-user-infos></app-top-user-infos>
@@ -62,5 +63,4 @@
                <button type="submit">Cadastrar</button>
           </form>
      </section>
-
 </section>
