feat: Finished basic implements for show users

--- a/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
+++ b/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
@@ -8,7 +8,7 @@
                </div>
                <p class="option-title">Cadastrar</p>
           </div>
-          <div class="option">
+          <div class="option" [routerLink]="['/show-users']">
                <div class="icon-div blue">
                     <i class="fa-solid fa-eye icon"></i>
                </div>
