--- a/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.sass
+++ b/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.sass
@@ -93,5 +93,5 @@
   tbody tr:nth-child(even) // Linhas pares com cor diferente
     background-color: #f2f2f2
 
-  tbody tr:hover // Efeito hover ao passar o mouse
+  tbody tr:hover
     background-color: #ddd
