feat: Finished output with search box and users table

--- a/frontend/src/app/components/main-search-user-box/main-search-user-box.component.html
+++ b/frontend/src/app/components/main-search-user-box/main-search-user-box.component.html
@@ -1,10 +1,11 @@
 <section class="search-student">
      <div class="title">
           <i class="fa-solid fa-magnifying-glass icon"></i>
-          <h2>Buscar usuários</h2>
+          <h2>{{ title }}</h2>
      </div>
      <div class="input">
-          <input type="text" name="student-name" placeholder="Digite aqui o nome do usuário">
-          <button class="input-button">Pesquisar</button>
+          <input type="text" id="searchInput" name="student-name" placeholder="Digite aqui o nome ou email do usuário">
+          <button (click)="search($event)" class="input-button">Pesquisar</button>
      </div>
 </section>
+<app-spinning></app-spinning>
