--- a/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
+++ b/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
@@ -14,7 +14,7 @@
                </div>
                <p class="option-title">Exibir usuários</p>
           </div>
-          <div class="option">
+          <div class="option" [routerLink]="['/users/show-results/edit']">
                <div class="icon-div yellow">
                     <i class="fa-solid fa-pen-to-square icon"></i>
                </div>
