feat: Finished delete confirm modal

--- a/frontend/src/app/components/main-search-user-box/main-search-user-box.component.html
+++ b/frontend/src/app/components/main-search-user-box/main-search-user-box.component.html
@@ -3,9 +3,11 @@
           <i class="fa-solid fa-magnifying-glass icon"></i>
           <h2>{{ title }}</h2>
      </div>
-     <div class="input">
-          <input type="text" id="searchInput" name="student-name" placeholder="Digite aqui o nome ou email do usuário">
-          <button (click)="search($event)" class="input-button">Pesquisar</button>
-     </div>
+     <form (submit)="search($event)">
+          <div class="input">
+               <input type="text" id="searchInput" name="student-name" placeholder="Digite aqui o nome ou email do usuário">
+               <button class="input-button" type="submit">Pesquisar</button>
+          </div>
+     </form>
 </section>
 <app-spinning></app-spinning>
