--- a/frontend/src/app/components/main-search-user-box/main-search-user-box.component.sass
+++ b/frontend/src/app/components/main-search-user-box/main-search-user-box.component.sass
@@ -43,6 +43,9 @@
      color: white
      cursor: pointer
 
+     &:hover
+          background-color: $secundary
+
 .icon 
      font-size: 25px
      margin-right: 1%
