--- a/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
+++ b/frontend/src/app/pages/admin/users-dashboard/users-dashboard.component.html
@@ -28,7 +28,7 @@
           </div>
      </section>
 
-     <app-main-search-user-box></app-main-search-user-box>
+     <!-- <app-main-search-user-box></app-main-search-user-box> -->
 
      <div class="full-div">
           <div class="title">
