refactor: Refactor users pages

--- a/frontend/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.html
@@ -3,6 +3,7 @@
           <ul>
                <li><a href="/"><i class="fa-solid fa-gauge icon"></i>Dashboard</a></li>
                <li><a href="/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li>
+               <li><a href="/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li>
           </ul>
      </nav>
 </header>
