--- a/frontend/src/app/components/top-user-infos/top-user-infos.component.html
+++ b/frontend/src/app/components/top-user-infos/top-user-infos.component.html
@@ -1,6 +1,6 @@
 <section class="infos">
      <div class="label-div">
-          <p>Informações principais</p>
+          <p>{{ title }}</p>
      </div>
      <div class="profile-infos">
           <div class="profile">
