--- a/frontend/src/app/pages/admin/users/show-users/show-users.component.html
+++ b/frontend/src/app/pages/admin/users/show-users/show-users.component.html
@@ -1,7 +1,7 @@
 <app-main-navbar></app-main-navbar>
 <app-spinning [isLoading]="isLoading"></app-spinning>
 <div class="main-section appear">
-     <app-top-user-infos></app-top-user-infos>
+     <app-top-user-infos [title]="title"></app-top-user-infos>
 
      <div class="full-div">
           <div class="title">
