--- a/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.html
+++ b/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.html
@@ -1,6 +1,6 @@
 <app-main-navbar></app-main-navbar>
 <section class="main-section appear">
-     <app-top-user-infos></app-top-user-infos>
+     <app-top-user-infos [title]="title"></app-top-user-infos>
      <section class="first-options">
           <div class="option" [routerLink]="['/create-user']">
                <div class="icon-div green">
