--- a/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.sass
+++ b/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.sass
@@ -1,4 +1,4 @@
-@import '../../../../sass/color-variables'
+@import '../../../../../sass/color-variables'
      
 .first-options
      display: grid
