--- a/frontend/src/app/pages/admin/users/create-users/create-users.component.html
+++ b/frontend/src/app/pages/admin/users/create-users/create-users.component.html
@@ -57,6 +57,7 @@
                     name="role" 
                     class="selectRole">
                          <option value="0">Admin</option>
+                         <option value="2">Moderador</option>
                          <option selected value="1">Usuário</option>
                </select>
 
