feat: Finished Create and Success page of the call

--- a/frontend/src/app/pages/admin/sectors/sectors-dashboard/sectors-dashboard.component.html
+++ b/frontend/src/app/pages/admin/sectors/sectors-dashboard/sectors-dashboard.component.html
@@ -2,25 +2,25 @@
 <section class="main-section appear">
      <app-top-user-infos [title]="title"></app-top-user-infos>
      <section class="first-options">
-          <div class="option" [routerLink]="['/create-sector']">
+          <div class="option" [routerLink]="['/admin/create-sector']">
                <div class="icon-div green">
                     <i class="fa-solid fa-vector-square icon"></i>
                </div>
                <p class="option-title">Criar setor</p>
           </div>
-          <div class="option" [routerLink]="['/show-sectors']">
+          <div class="option" [routerLink]="['/admin/show-sectors']">
                <div class="icon-div blue">
                     <i class="fa-solid fa-eye icon"></i>
                </div>
                <p class="option-title">Exibir setores</p>
           </div>
-          <div class="option" [routerLink]="['/sectors/show-results/edit']">
+          <div class="option" [routerLink]="['/admin/sectors/show-results/edit']">
                <div class="icon-div yellow">
                     <i class="fa-solid fa-pen-to-square icon"></i>
                </div>
                <p class="option-title">Atualizar setor</p>
           </div>
-          <div class="option" [routerLink]="['/sectors/show-results/trash']">
+          <div class="option" [routerLink]="['/admin/sectors/show-results/trash']">
                <div class="icon-div red">
                     <i class="fa-solid fa-trash icon"></i>
                </div>
