--- a/frontend/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.html
@@ -2,8 +2,9 @@
      <nav>
           <ul>
                <li><a href="/"><i class="fa-solid fa-gauge icon"></i>Dashboard</a></li>
-               <li><a href="/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li>
-               <li><a href="/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li>
+               <li><a href="/admin/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li> <!-- admin -->
+               <li><a href="/admin/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li> <!-- admin -->
+               <li><a href="/call/open"><i class="fa-solid fa-headset icon"></i>Abrir chamado</a></li>
           </ul>
      </nav>
 </header>
