--- a/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.html
+++ b/frontend/src/app/pages/admin/users/users-dashboard/users-dashboard.component.html
@@ -2,25 +2,25 @@
 <section class="main-section appear">
      <app-top-user-infos [title]="title"></app-top-user-infos>
      <section class="first-options">
-          <div class="option" [routerLink]="['/create-user']">
+          <div class="option" [routerLink]="['/admin/create-user']">
                <div class="icon-div green">
                     <i class="fa-solid fa-user-plus icon"></i>
                </div>
                <p class="option-title">Cadastrar</p>
           </div>
-          <div class="option" [routerLink]="['/show-users']">
+          <div class="option" [routerLink]="['/admin/show-users']">
                <div class="icon-div blue">
                     <i class="fa-solid fa-eye icon"></i>
                </div>
                <p class="option-title">Exibir usuários</p>
           </div>
-          <div class="option" [routerLink]="['/users/show-results/edit']">
+          <div class="option" [routerLink]="['/admin/users/show-results/edit']">
                <div class="icon-div yellow">
                     <i class="fa-solid fa-pen-to-square icon"></i>
                </div>
                <p class="option-title">Atualizar</p>
           </div>
-          <div class="option" [routerLink]="['/users/show-results/trash']">
+          <div class="option" [routerLink]="['/admin/users/show-results/trash']">
                <div class="icon-div red">
                     <i class="fa-solid fa-trash icon"></i>
                </div>
