--- a/frontend/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.html
@@ -5,6 +5,7 @@
                <li><a href="/admin/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li> <!-- admin -->
                <li><a href="/admin/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li> <!-- admin -->
                <li><a href="/call/open"><i class="fa-solid fa-headset icon"></i>Abrir chamado</a></li>
+               <li><a href="/admin/call"><i class="fa-solid fa-headset icon"></i>Chamados</a></li> <!-- moderador -->
           </ul>
      </nav>
 </header>
