--- a/frontend/src/app/components/top-user-infos/top-user-infos.component.html
+++ b/frontend/src/app/components/top-user-infos/top-user-infos.component.html
@@ -4,9 +4,9 @@
      </div>
      <div class="profile-infos">
           <div class="profile">
-               <p>Gabriel Cruz Rodrigues</p>
+               <p>{{ name }}</p>
                <i class="fa-solid fa-user icon"></i>
+               <i class="fa-solid fa-bell icon"></i>
           </div>
-          <i class="fa-solid fa-bell icon"></i>
      </div>
 </section>
