--- a/frontend/src/app/components/top-user-infos/top-user-infos.component.sass
+++ b/frontend/src/app/components/top-user-infos/top-user-infos.component.sass
@@ -17,7 +17,6 @@
      width: 27%
      justify-content: end
 
-
 .profile 
      width: 70%
      height: 40px
@@ -25,7 +24,7 @@
      cursor: pointer
      align-items: center
      gap: 5%
-     flex-direction: end
+     justify-content: end
 
 .icon
      font-size: 25px
