--- a/frontend/src/app/pages/admin/users/edit-user/edit-user.component.html
+++ b/frontend/src/app/pages/admin/users/edit-user/edit-user.component.html
@@ -58,6 +58,7 @@
                     class="selectRole">
                          <option value="0">Admin</option>
                          <option selected value="1">Usuário</option>
+                         <option value="2">Moderador</option>
                </select>
 
                <button type="submit">Cadastrar</button>
