--- a/frontend/src/app/pages/public/calls/list-my-calls/list-my-calls.component.html
+++ b/frontend/src/app/pages/public/calls/list-my-calls/list-my-calls.component.html
@@ -1,6 +1,6 @@
 <app-main-navbar></app-main-navbar>
 <section class="main-section appear">
      <app-top-user-infos [title]="title"></app-top-user-infos>
-     <app-calls-table [calls]="calls"></app-calls-table>
+     <app-my-calls-table [calls]="calls"></app-my-calls-table>
 </section>
 <app-spinning [isLoading]="isLoading"></app-spinning>
