--- a/frontend/src/app/components/calls-table/calls-table.component.html
+++ b/frontend/src/app/components/calls-table/calls-table.component.html
@@ -9,7 +9,7 @@
           </tr>
      </thead>
      <tbody>
-          <tr *ngFor="let call of calls">
+          <tr *ngFor="let call of calls" (click)="openContent(call.content)">
                <td>{{call.title}}</td>
                <td>{{call.sectorName}}</td>
                <td>{{call.userName}}</td>
@@ -22,3 +22,8 @@
      </tbody>
 </table>
 <app-spinning [isLoading]="isLoading"></app-spinning>
+<app-content-call-modal 
+     [message]="contentModal" 
+     *ngIf="contentModalOpen"
+     (confirm)="confirm($event)"
+></app-content-call-modal>
