feat: Add notify sound

--- a/frontend/src/app/pages/public/login/login.component.sass
+++ b/frontend/src/app/pages/public/login/login.component.sass
@@ -1,4 +1,4 @@
-@import '../../../../sass/color-variables'
+@use '../../../../sass/color-variables' as *
      
 // Estilização da tela de login
 .login-container
