--- a/frontend/src/app/pages/admin/sectors/show-sectors/show-sectors.component.sass
+++ b/frontend/src/app/pages/admin/sectors/show-sectors/show-sectors.component.sass
@@ -1,4 +1,4 @@
-@import '../../../../../sass/color-variables'
+@use '../../../../../sass/color-variables' as *
 
 .buttons-options
      display: flex
