--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@use 'sass/color-variables' as *
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap')
-@import 'sass/color-variables'
 
 *
      margin: 0
