feat: Add login with username

--- a/frontend/src/app/pages/public/login/login.component.html
+++ b/frontend/src/app/pages/public/login/login.component.html
@@ -6,7 +6,7 @@
           <h2>Faça login para continuar!</h2>
           <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                <div class="input-group">
-                    <input formControlName="email" type="email" id="email" placeholder="Digite seu email" required />
+                    <input formControlName="login" type="text" id="text" placeholder="Digite seu usuário ou email" required />
                </div>               
                <div class="input-group">
                     <input formControlName="password" type="password" id="password" placeholder="Digite sua senha" required />
