--- a/frontend/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.html
@@ -1,6 +1,6 @@
 <header class="appear">
      <nav>
-          <ul>
+          <ul *ngIf="!isLoading">
                <li *ngIf="moderador"><a href="/"><i class="fa-solid fa-gauge icon"></i>Dashboard</a></li>
                <li *ngIf="moderador"><a href="/admin/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li> <!-- moderador -->
                <li *ngIf="moderador"><a href="/admin/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li> <!-- moderador -->
