--- a/frontend/src/app/components/main-navbar/main-navbar.component.html
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.html
@@ -1,19 +1,22 @@
 <header class="appear">
      <nav>
-          <ul *ngIf="!isLoading && moderador">
+          @if (!isLoading && moderador || admin) {
+          <ul>
                <li><a href="/"><i class="fa-solid fa-gauge icon"></i>Dashboard</a></li>
-               <li><a href="/admin/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li> <!-- moderador -->
+               <li><a href="/admin/users"><i class="fa-solid fa-user icon"></i>Usuários</a></li>
                <li><a href="/admin/sectors"><i class="fa-solid fa-vector-square icon"></i>Setores</a></li>
-               <!-- moderador -->
                <li><a href="/call/open"><i class="fa-solid fa-headset icon"></i>Abrir chamado</a></li>
-               <li><a href="/admin/call"><i class="fa-solid fa-headset icon"></i>Chamados</a></li> <!-- moderador -->
+               <li><a href="/admin/call"><i class="fa-solid fa-headset icon"></i>Chamados</a></li>
                <li><a href="/call/my"><i class="fa-solid fa-list-ul icon"></i>Meus chamados</a></li>
                <li (click)="logout()"><a><i class="fa-solid fa-door-open icon"></i>Sair</a></li>
           </ul>
-          <ul *ngIf="!isLoading && user && moderador == false">
+          }
+          @if (!isLoading && user) {
+          <ul>
                <li><a href="/call/open"><i class="fa-solid fa-headset icon"></i>Abrir chamado</a></li>
                <li><a href="/call/my"><i class="fa-solid fa-list-ul icon"></i>Meus chamados</a></li>
                <li (click)="logout()"><a><i class="fa-solid fa-door-open icon"></i>Sair</a></li>
           </ul>
+          }
      </nav>
 </header>
