--- a/frontend/src/app/components/pagination/pagination.component.html
+++ b/frontend/src/app/components/pagination/pagination.component.html
@@ -1,16 +1,18 @@
 <nav class="pagination">
      <ul class="pagination__list">
-          <li class="pagination__item" (click)="backPage()">
+          <!-- <li class="pagination__item" (click)="changePage($index, 'back')">
                <a class="pagination__link pagination__link--prev">«</a>
-          </li>
+          </li> -->
 
           <!-- <li class="pagination__item"><a href="#" class="pagination__link pagination__link--active">1</a></li> -->
           @for (page of pages; track $index) {
-               <li (click)="changePage($index)" class="pagination__item"><a class="pagination__link">{{ page }}</a></li>
+               <li (click)="changePage($index, 'random')" class="pagination__item">
+                    <a class="pagination__link" [ngClass]="{ 'pagination__link--active': $index === actualPage }">{{ page }}</a>
+               </li>
           }
           
-          <li class="pagination__item" (click)="nextPage()">
+          <!-- <li class="pagination__item" (click)="changePage($index, 'next')">
                <a class="pagination__link pagination__link--next">»</a>
-          </li>
+          </li> -->
      </ul>
 </nav>
