--- a/frontend/src/app/components/main-navbar/main-navbar.component.sass
+++ b/frontend/src/app/components/main-navbar/main-navbar.component.sass
@@ -1,6 +1,8 @@
 @use '../../../sass/color-variables' as * 
 
-header 
+$drop-menu: #04146c
+
+header
      position: fixed
      left: 0
      top: 0
@@ -11,20 +13,16 @@ header
      flex-direction: column
      align-items: center
 
-
-nav 
+nav
      width: 100%
      height: 100%
-
 
 // .logo-div 
 //      display: flex
 //      justify-content: center
 
-
 // .logo 
 //      width: 60%
-
 
 nav ul 
      list-style: none
@@ -33,13 +31,11 @@ nav ul
      justify-content: center
      flex-direction: column
 
-
-.icon 
+.icon
      width: 25px
      height: 25px
      margin-right: 1%
      margin-left: 1%
-
 
 nav ul li 
      padding: 10px 0
@@ -48,19 +44,27 @@ nav ul li
      display: flex
      transition: 0.7s
 
-
 nav ul li a 
      text-align: baseline
      margin-left: 10%
-     font-size: 18px
+     font-size: 16px
      width: 100%
      align-items: center
-     transition: 0.7s
+     // transition: 0.2s
      text-decoration: none
      color: white
-
-
 
 nav ul li:hover 
      background-color: rgba(255, 255, 255, 0.185)
      cursor: pointer
+
+.dropdown-content li
+     padding-left: 20px
+     background-color: $secundary
+
+.selected-li 
+     background-color: $third
+
+     &:hover 
+          background-color: $third !important
+
