--- a/frontend/src/app/pages/admin/sectors/sectors-dashboard/sectors-dashboard.component.html
+++ b/frontend/src/app/pages/admin/sectors/sectors-dashboard/sectors-dashboard.component.html
@@ -1,4 +1,5 @@
 <app-main-navbar></app-main-navbar>
+<app-main-navbar></app-main-navbar>
 <section class="main-section appear">
      <app-top-user-infos [title]="title"></app-top-user-infos>
      <section class="first-options">
